Fix submenu indicator not showing up

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -942,6 +942,7 @@ main#main-content table.jb-cap-frame td {
 #superfish-1 li.sf-depth-1.menuparent > a:after {
   content: '\f0d7';
   font-family: "Font Awesome 5 Free";
+  font-weight: 900;
   position: relative;
   left: 5px;
 }
@@ -1021,6 +1022,7 @@ main#main-content table.jb-cap-frame td {
   content: '\f0d7';
   margin-left: 0.5em;
   font-family: "Font Awesome 5 Free";
+  font-weight: 900;
 }
 
 /*# sourceMappingURL=lw-omega.styles.css.map */
