--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -56,6 +56,7 @@
             >a:after {
                 content: '\f0d7';
                 font-family: "Font Awesome 5 Free";
+                font-weight: 900;
                 position: relative;
                 left: 5px;
             }
@@ -149,6 +150,7 @@
 			content: '\f0d7';
 			margin-left: 0.5em;
 			font-family: "Font Awesome 5 Free";
+            font-weight: 900;
 		}
 	}
 }
